fix: fixed overflow bug

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -19,6 +19,6 @@ body {
     box-sizing: border-box;
 }
 
-* {
-    // border: 1px dashed red;
-}
+// * {
+//     border: 1px dashed red;
+// }
