--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/mixins" as *;
 
 .contact-form {
-  padding: 5vh;
+  // padding: 5vh;
   display: flex;
   flex-direction: column;
   gap: 2rem;
